clean up gradle scripts & reduce final jar size