@@ -1,27 +1,21 @@
 plugins {
-    `java-library`
     id("net.kyori.indra")
     id("com.github.johnrengelman.shadow")
 }
 
-dependencies {
-    compileOnly("org.checkerframework", "checker-qual", Versions.CheckframeworkQual)
-}
-
 tasks {
+    compileJava {
+        options.encoding = "UTF-8"
+    }
+    compileTestJava {
+        options.encoding = "UTF-8"
+    }
     assemble {
         dependsOn(shadowJar)
     }
-    shadowJar {
-        archiveClassifier.set("shaded")
-        dependencies {
-            exclude("META-INF/NOTICE")
-            exclude("META-INF/LICENSE")
-            exclude("META-INF/DEPENDENCIES")
-            exclude("META-INF/maven/**")
-            exclude("META-INF/versions/**")
-            exclude("META-INF/**.kotlin_module")
-        }
+    test {
+        jvmArgs("-XX:+EnableDynamicAgentLoading") // suppress Java agent warning
+        useJUnitPlatform() // use JUnit 5
     }
 }
 
